--- a/css/main.css
+++ b/css/main.css
@@ -219,10 +219,24 @@ header::after {
 	height: 120px;
 	margin: 0 auto;
 	margin-top: 20px;
-	background: url(../img/avatar1.jpg) no-repeat center center / 180%;
 	border-radius: 50%;
 }
 
+.worker:nth-child(1) .worker__avatar {
+	background: url(../img/avatar1.jpg) no-repeat center center / 100%;
+}
+
+.worker:nth-child(2) .worker__avatar {
+	background: url(../img/avatar2.jpg) no-repeat center center / 100%;
+}
+
+.worker:nth-child(3) .worker__avatar {
+	background: url(../img/avatar3.jpg) no-repeat center center / 100%;
+}
+
+.worker:nth-child(4) .worker__avatar {
+	background: url(../img/avatar4.jpg) no-repeat center center / 100%;
+}
 .worker__name {
 	margin-top: 18px;
 	font-size: 18px;
