--- a/css/main.css
+++ b/css/main.css
@@ -588,10 +588,9 @@ header::after {
 		left: 0;
 		width: 100%;
 		height: 60vh;
-		background: rgba(52, 74, 97, .8);
+		background: rgba(52, 74, 97, .87);
 	}
 	
-	/*	open/close mmibile menu	*/
 	.top-menu__menu--block {
 		display: block;
 	}
@@ -600,6 +599,7 @@ header::after {
 		display: flex;
 		flex-direction: column;
 		height: 100%;
+		font-size: 18px;
 	}
 
 	.top-menu__menu li {
